src/objects/RecentItem__c.object
<CustomObject>
    <description>A object holds all users&apos; recent item records.</description>
    <fields>
        <fullName>Link__c</fullName>
        <inlineHelpText>The original record link. That&apos;s it, the URL in user&apos;s browser.</inlineHelpText>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>No_Of_Access__c</fullName>
        <inlineHelpText>How many times a user has accessed this record.</inlineHelpText>
        <label>No. Of Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>The object record belongs to.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <inlineHelpText>The 15 or 18 digits long salesforce record ID.</inlineHelpText>
        <label>RecordID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <inlineHelpText>The name/subject/title of the record.</inlineHelpText>
        <label>Record Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <inlineHelpText>The user who accessed the record.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RecentItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RecentItem</label>
    <listViews>
        <fullName>All_new</fullName>
        <columns>Record_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Link__c</columns>
        <columns>User__c</columns>
        <columns>No_Of_Access__c</columns>
        <columns>RecordID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All new</label>
    </listViews>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>RecentItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RecentItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>